--- a/device-types/HPE/OfficeConnect-1810-24G.yml
+++ b/device-types/HPE/OfficeConnect-1810-24G.yml
@@ -1,8 +1,8 @@
 ---
 manufacturer: HPE
-model: OfficeConnect 1810-24G
-slug: hpe-officeconnect-1810-24g
-part_number: J9803A
+model: OfficeConnect 1820-24G
+slug: hpe-officeconnect-1820-24g
+part_number: j9980a
 u_height: 1
 is_full_depth: false
 power-ports:
